--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,77 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
-# Binaries for programs and plugins
+*
+!/**/
+!*.*
+.target
+target
+.idea/
+bin
+src/debug
+_debug_bin
+__debug_bin
+*debug_bin
+debug_bin
+debug
+*~$*
+
+*.log
+*.log.*
+logs
+.logs
+.logs.*
+*.ctxt
+.mtj.tmp/
+
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+unpackage
+ 
+hs_err_pid*
+.svn
+.idea
+*.iml
 *.exe
 *.exe~
+*.debug
+debug
 *.dll
 *.so
 *.dylib
-
-# Test binary, built with `go test -c`
 *.test
+*.pdb
+*.vs
+*.stackdump
+node_modules
 
-# Code coverage profiles and other test artifacts
+/dist
+pack
+package-lock.json
+yarn.lock
+sh.exe.stackdump
 *.out
-coverage.*
-*.coverprofile
-profile.cov
-
-# Dependency directories (remove the comment below to include it)
-# vendor/
-
-# Go workspace file
-go.work
-go.work.sum
-
-# env file
-.env
-
-# Editor/IDE
-# .idea/
-# .vscode/
+rice-box.go
+.DS_Store
+__MACOSX
+~*.tmp
+gen
+debug.test
+Cargo.lock
+**/*.rs.bk
+_common_po.go
+_jtbl_po.go
+_model_po.go
+_tmp_po.go
+nul
+tmp_del
+smcs-data
+dfs-data
+dfs-db
+dfs-file
+dfs-info
+backup-data
+backup-transfer
+vendor
